--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,6 @@
 [submodule "modules"]
-    path = modules
-    url = https://github.com/Bee-Den-Group/zephyr-modules
-
+	path = zephyr-modules
+	url = https://github.com/Bee-Den-Group/zephyr-modules
 [submodule "boards"]
-    path = boards
-    url = https://github.com/Bee-Den-Group/zephyr-boards
+	path = zephyr-boards
+	url = https://github.com/Bee-Den-Group/zephyr-boards
